# gstreamer-rknn

./: .gitignore  README.md  meson.build
script/: file_test.sh  stream_test.sh  udp_test.sh
src/: dmabuffer.c  dmabuffer.h  gstrknn.c  gstrknn.h  meson.build  postprocess.cc  postprocess.h  rgaprocess.cc  rgaprocess.h  rknnprocess.cc  rknnprocess.h
test/: frame_1920x1080_nv16.raw  meson.build  rga_test.c
